@@ -1,3 +1,5 @@
+* Add support for proprietary opacity styles to setOpacity() and getOpacity(). [David Mark, jddalton]
+
 * Make inspect() methods support iterating over objects that have their own generic inspect() method. [jddalton]
 
 * Add native JSON support to the JSON methods and make them comply with ECMA specs. [FuseJS LH #22] [jddalton, kitsg, Tobie Langel]
